src/bash/grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TIME

Grammar

Rule 0     S' -> program
Rule 1     program -> linebreak complete_commands linebreak
Rule 2     program -> linebreak
Rule 3     complete_commands -> complete_commands newline_list complete_command
Rule 4     complete_commands -> complete_command
Rule 5     complete_command -> and_or_list separator_op
Rule 6     complete_command -> and_or_list
Rule 7     and_or_list -> and_or_list AND_IF linebreak pipeline
Rule 8     and_or_list -> and_or_list OR_IF linebreak pipeline
Rule 9     and_or_list -> pipeline
Rule 10    pipeline -> pipeline PIPE linebreak command
Rule 11    pipeline -> command
Rule 12    command -> simple_command
Rule 13    command -> compound_command
Rule 14    command -> compound_command redirect_list
Rule 15    command -> function_def
Rule 16    simple_command -> cmd_prefix cmd_word cmd_suffix
Rule 17    simple_command -> cmd_prefix cmd_word
Rule 18    simple_command -> cmd_prefix
Rule 19    simple_command -> cmd_word cmd_suffix
Rule 20    simple_command -> cmd_word
Rule 21    cmd_prefix -> cmd_prefix ASSIGNMENT_WORD
Rule 22    cmd_prefix -> cmd_prefix io_redirect
Rule 23    cmd_prefix -> ASSIGNMENT_WORD
Rule 24    cmd_prefix -> io_redirect
Rule 25    cmd_word -> word
Rule 26    cmd_suffix -> cmd_suffix word
Rule 27    cmd_suffix -> cmd_suffix io_redirect
Rule 28    cmd_suffix -> word
Rule 29    cmd_suffix -> io_redirect
Rule 30    compound_command -> brace_group
Rule 31    compound_command -> subshell
Rule 32    compound_command -> if_clause
Rule 33    compound_command -> for_clause
Rule 34    compound_command -> while_clause
Rule 35    compound_command -> until_clause
Rule 36    compound_command -> case_clause
Rule 37    brace_group -> LBRACE compound_list RBRACE
Rule 38    subshell -> LPAREN compound_list RPAREN
Rule 39    do_group -> DO compound_list DONE
Rule 40    if_clause -> IF compound_list THEN compound_list ELSE compound_list FI
Rule 41    if_clause -> IF compound_list THEN compound_list elif_parts FI
Rule 42    if_clause -> IF compound_list THEN compound_list elif_parts ELSE compound_list FI
Rule 43    if_clause -> IF compound_list THEN compound_list FI
Rule 44    elif_parts -> elif_parts ELIF compound_list THEN compound_list
Rule 45    elif_parts -> ELIF compound_list THEN compound_list
Rule 46    for_clause -> FOR WORD linebreak IN wordlist separator do_group
Rule 47    for_clause -> FOR WORD separator do_group
Rule 48    while_clause -> WHILE compound_list do_group
Rule 49    until_clause -> UNTIL compound_list do_group
Rule 50    case_clause -> CASE word linebreak IN linebreak case_list ESAC
Rule 51    case_clause -> CASE word linebreak IN linebreak ESAC
Rule 52    case_list -> case_list case_item
Rule 53    case_list -> case_item
Rule 54    case_item -> pattern RPAREN linebreak compound_list DSEMI linebreak
Rule 55    case_item -> pattern RPAREN linebreak DSEMI linebreak
Rule 56    case_item -> pattern RPAREN linebreak compound_list linebreak
Rule 57    pattern -> pattern PIPE word
Rule 58    pattern -> word
Rule 59    function_def -> WORD LPAREN RPAREN linebreak function_body
Rule 60    function_def -> FUNCTION WORD linebreak function_body
Rule 61    function_def -> FUNCTION WORD LPAREN RPAREN linebreak function_body
Rule 62    function_body -> compound_command
Rule 63    compound_list -> linebreak term separator
Rule 64    compound_list -> linebreak term
Rule 65    term -> term separator and_or_list
Rule 66    term -> and_or_list
Rule 67    io_redirect -> LESS word
Rule 68    io_redirect -> GREAT word
Rule 69    io_redirect -> DGREAT word
Rule 70    io_redirect -> LESSAND word
Rule 71    io_redirect -> GREATAND word
Rule 72    io_redirect -> FD_GREAT word
Rule 73    io_redirect -> FD_DGREAT word
Rule 74    io_redirect -> HEREDOC word
Rule 75    io_redirect -> HERESTRING word
Rule 76    redirect_list -> redirect_list io_redirect
Rule 77    redirect_list -> io_redirect
Rule 78    word -> WORD
Rule 79    word -> SINGLE_QUOTED
Rule 80    word -> DOUBLE_QUOTED
Rule 81    word -> VAR_SIMPLE
Rule 82    word -> VAR_BRACED
Rule 83    word -> VAR_SPECIAL
Rule 84    word -> CMD_SUB
Rule 85    word -> CMD_SUB_BACKTICK
Rule 86    word -> ARITH_SUB
Rule 87    word -> NUMBER
Rule 88    word -> ASSIGNMENT_WORD
Rule 89    word -> LBRACKET
Rule 90    word -> RBRACKET
Rule 91    word -> DLBRACKET
Rule 92    word -> DRBRACKET
Rule 93    wordlist -> wordlist word
Rule 94    wordlist -> word
Rule 95    separator_op -> AMP
Rule 96    separator_op -> SEMI
Rule 97    separator -> separator_op linebreak
Rule 98    separator -> newline_list
Rule 99    newline_list -> newline_list NEWLINE
Rule 100   newline_list -> NEWLINE
Rule 101   linebreak -> newline_list
Rule 102   linebreak -> empty
Rule 103   empty -> <empty>

Terminals, with rules where they appear

AMP                  : 95
AND_IF               : 7
ARITH_SUB            : 86
ASSIGNMENT_WORD      : 21 23 88
CASE                 : 50 51
CMD_SUB              : 84
CMD_SUB_BACKTICK     : 85
DGREAT               : 69
DLBRACKET            : 91
DO                   : 39
DONE                 : 39
DOUBLE_QUOTED        : 80
DRBRACKET            : 92
DSEMI                : 54 55
ELIF                 : 44 45
ELSE                 : 40 42
ESAC                 : 50 51
FD_DGREAT            : 73
FD_GREAT             : 72
FI                   : 40 41 42 43
FOR                  : 46 47
FUNCTION             : 60 61
GREAT                : 68
GREATAND             : 71
HEREDOC              : 74
HERESTRING           : 75
IF                   : 40 41 42 43
IN                   : 46 50 51
LBRACE               : 37
LBRACKET             : 89
LESS                 : 67
LESSAND              : 70
LPAREN               : 38 59 61
NEWLINE              : 99 100
NUMBER               : 87
OR_IF                : 8
PIPE                 : 10 57
RBRACE               : 37
RBRACKET             : 90
RPAREN               : 38 54 55 56 59 61
SEMI                 : 96
SINGLE_QUOTED        : 79
THEN                 : 40 41 42 43 44 45
TIME                 : 
UNTIL                : 49
VAR_BRACED           : 82
VAR_SIMPLE           : 81
VAR_SPECIAL          : 83
WHILE                : 48
WORD                 : 46 47 59 60 61 78
error                : 

Nonterminals, with rules where they appear

and_or_list          : 5 6 7 8 65 66
brace_group          : 30
case_clause          : 36
case_item            : 52 53
case_list            : 50 52
cmd_prefix           : 16 17 18 21 22
cmd_suffix           : 16 19 26 27
cmd_word             : 16 17 19 20
command              : 10 11
complete_command     : 3 4
complete_commands    : 1 3
compound_command     : 13 14 62
compound_list        : 37 38 39 40 40 40 41 41 42 42 42 43 43 44 44 45 45 48 49 54 56
do_group             : 46 47 48 49
elif_parts           : 41 42 44
empty                : 102
for_clause           : 33
function_body        : 59 60 61
function_def         : 15
if_clause            : 32
io_redirect          : 22 24 27 29 76 77
linebreak            : 1 1 2 7 8 10 46 50 50 51 51 54 54 55 55 56 56 59 60 61 63 64 97
newline_list         : 3 98 99 101
pattern              : 54 55 56 57
pipeline             : 7 8 9 10
program              : 0
redirect_list        : 14 76
separator            : 46 47 63 65
separator_op         : 5 97
simple_command       : 12
subshell             : 31
term                 : 63 64 65
until_clause         : 35
while_clause         : 34
word                 : 25 26 28 50 51 57 58 67 68 69 70 71 72 73 74 75 93 94
wordlist             : 46 93

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . linebreak complete_commands linebreak
    (2) program -> . linebreak
    (101) linebreak -> . newline_list
    (102) linebreak -> . empty
    (99) newline_list -> . newline_list NEWLINE
    (100) newline_list -> . NEWLINE
    (103) empty -> .

    NEWLINE         shift and go to state 5
    WORD            reduce using rule 103 (empty -> .)
    FUNCTION        reduce using rule 103 (empty -> .)
    ASSIGNMENT_WORD reduce using rule 103 (empty -> .)
    LBRACE          reduce using rule 103 (empty -> .)
    LPAREN          reduce using rule 103 (empty -> .)
    IF              reduce using rule 103 (empty -> .)
    FOR             reduce using rule 103 (empty -> .)
    WHILE           reduce using rule 103 (empty -> .)
    UNTIL           reduce using rule 103 (empty -> .)
    CASE            reduce using rule 103 (empty -> .)
    LESS            reduce using rule 103 (empty -> .)
    GREAT           reduce using rule 103 (empty -> .)
    DGREAT          reduce using rule 103 (empty -> .)
    LESSAND         reduce using rule 103 (empty -> .)
    GREATAND        reduce using rule 103 (empty -> .)
    FD_GREAT        reduce using rule 103 (empty -> .)
    FD_DGREAT       reduce using rule 103 (empty -> .)
    HEREDOC         reduce using rule 103 (empty -> .)
    HERESTRING      reduce using rule 103 (empty -> .)
    SINGLE_QUOTED   reduce using rule 103 (empty -> .)
    DOUBLE_QUOTED   reduce using rule 103 (empty -> .)
    VAR_SIMPLE      reduce using rule 103 (empty -> .)
    VAR_BRACED      reduce using rule 103 (empty -> .)
    VAR_SPECIAL     reduce using rule 103 (empty -> .)
    CMD_SUB         reduce using rule 103 (empty -> .)
    CMD_SUB_BACKTICK reduce using rule 103 (empty -> .)
    ARITH_SUB       reduce using rule 103 (empty -> .)
    NUMBER          reduce using rule 103 (empty -> .)
    LBRACKET        reduce using rule 103 (empty -> .)
    RBRACKET        reduce using rule 103 (empty -> .)
    DLBRACKET       reduce using rule 103 (empty -> .)
    DRBRACKET       reduce using rule 103 (empty -> .)
    $end            reduce using rule 103 (empty -> .)

    program                        shift and go to state 1
    linebreak                      shift and go to state 2
    newline_list                   shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> linebreak . complete_commands linebreak
    (2) program -> linebreak .
    (3) complete_commands -> . complete_commands newline_list complete_command
    (4) complete_commands -> . complete_command
    (5) complete_command -> . and_or_list separator_op
    (6) complete_command -> . and_or_list
    (7) and_or_list -> . and_or_list AND_IF linebreak pipeline
    (8) and_or_list -> . and_or_list OR_IF linebreak pipeline
    (9) and_or_list -> . pipeline
    (10) pipeline -> . pipeline PIPE linebreak command
    (11) pipeline -> . command
    (12) command -> . simple_command
    (13) command -> . compound_command
    (14) command -> . compound_command redirect_list
    (15) command -> . function_def
    (16) simple_command -> . cmd_prefix cmd_word cmd_suffix
    (17) simple_command -> . cmd_prefix cmd_word
    (18) simple_command -> . cmd_prefix
    (19) simple_command -> . cmd_word cmd_suffix
    (20) simple_command -> . cmd_word
    (30) compound_command -> . brace_group
    (31) compound_command -> . subshell
    (32) compound_command -> . if_clause
    (33) compound_command -> . for_clause
    (34) compound_command -> . while_clause
    (35) compound_command -> . until_clause
    (36) compound_command -> . case_clause
    (59) function_def -> . WORD LPAREN RPAREN linebreak function_body
    (60) function_def -> . FUNCTION WORD linebreak function_body
    (61) function_def -> . FUNCTION WORD LPAREN RPAREN linebreak function_body
    (21) cmd_prefix -> . cmd_prefix ASSIGNMENT_WORD
    (22) cmd_prefix -> . cmd_prefix io_redirect
    (23) cmd_prefix -> . ASSIGNMENT_WORD
    (24) cmd_prefix -> . io_redirect
    (25) cmd_word -> . word
    (37) brace_group -> . LBRACE compound_list RBRACE
    (38) subshell -> . LPAREN compound_list RPAREN
    (40) if_clause -> . IF compound_list THEN compound_list ELSE compound_list FI
    (41) if_clause -> . IF compound_list THEN compound_list elif_parts FI
    (42) if_clause -> . IF compound_list THEN compound_list elif_parts ELSE compound_list FI
    (43) if_clause -> . IF compound_list THEN compound_list FI
    (46) for_clause -> . FOR WORD linebreak IN wordlist separator do_group
    (47) for_clause -> . FOR WORD separator do_group
    (48) while_clause -> . WHILE compound_list do_group
    (49) until_clause -> . UNTIL compound_list do_group
    (50) case_clause -> . CASE word linebreak IN linebreak case_list ESAC
    (51) case_clause -> . CASE word linebreak IN linebreak ESAC
    (67) io_redirect -> . LESS word
    (68) io_redirect -> . GREAT word
    (69) io_redirect -> . DGREAT word
    (70) io_redirect -> . LESSAND word
    (71) io_redirect -> . GREATAND word
    (72) io_redirect -> . FD_GREAT word
    (73) io_redirect -> . FD_DGREAT word
    (74) io_redirect -> . HEREDOC word
    (75) io_redirect -> . HERESTRING word
    (78) word -> . WORD
    (79) word -> . SINGLE_QUOTED
    (80) word -> . DOUBLE_QUOTED
    (81) word -> . VAR_SIMPLE
    (82) word -> . VAR_BRACED
    (83) word -> . VAR_SPECIAL
    (84) word -> . CMD_SUB
    (85) word -> . CMD_SUB_BACKTICK
    (86) word -> . ARITH_SUB
    (87) word -> . NUMBER
    (88) word -> . ASSIGNMENT_WORD
    (89) word -> . LBRACKET
    (90) word -> . RBRACKET
    (91) word -> . DLBRACKET
    (92) word -> . DRBRACKET

    $end            reduce using rule 2 (program -> linebreak .)
    WORD            shift and go to state 23
    FUNCTION        shift and go to state 25
    ASSIGNMENT_WORD shift and go to state 26
    LBRACE          shift and go to state 29
    LPAREN          shift and go to state 24
    IF              shift and go to state 30
    FOR             shift and go to state 31
    WHILE           shift and go to state 32
    UNTIL           shift and go to state 33
    CASE            shift and go to state 34
    LESS            shift and go to state 35
    GREAT           shift and go to state 36
    DGREAT          shift and go to state 37
    LESSAND         shift and go to state 38
    GREATAND        shift and go to state 39
    FD_GREAT        shift and go to state 40
    FD_DGREAT       shift and go to state 41
    HEREDOC         shift and go to state 42
    HERESTRING      shift and go to state 43
    SINGLE_QUOTED   shift and go to state 44
    DOUBLE_QUOTED   shift and go to state 45
    VAR_SIMPLE      shift and go to state 46
    VAR_BRACED      shift and go to state 47
    VAR_SPECIAL     shift and go to state 48
    CMD_SUB         shift and go to state 49
    CMD_SUB_BACKTICK shift and go to state 50
    ARITH_SUB       shift and go to state 51
    NUMBER          shift and go to state 52
    LBRACKET        shift and go to state 53
    RBRACKET        shift and go to state 54
    DLBRACKET       shift and go to state 55
    DRBRACKET       shift and go to state 56

    complete_commands              shift and go to state 6
    complete_command               shift and go to state 7
    and_or_list                    shift and go to state 8
    pipeline                       shift and go to state 9
    command                        shift and go to state 10
    simple_command                 shift and go to state 11
    compound_command               shift and go to state 12
    function_def                   shift and go to state 13
    cmd_prefix                     shift and go to state 14
    cmd_word                       shift and go to state 15
    brace_group                    shift and go to state 16
    subshell                       shift and go to state 17
    if_clause                      shift and go to state 18
    for_clause                     shift and go to state 19
    while_clause                   shift and go to state 20
    until_clause                   shift and go to state 21
    case_clause                    shift and go to state 22
    io_redirect                    shift and go to state 27
    word                           shift and go to state 28

state 3

    (101) linebreak -> newline_list .
    (99) newline_list -> newline_list . NEWLINE

  ! shift/reduce conflict for NEWLINE resolved as shift
    WORD            reduce using rule 101 (linebreak -> newline_list .)
    FUNCTION        reduce using rule 101 (linebreak -> newline_list .)
    ASSIGNMENT_WORD reduce using rule 101 (linebreak -> newline_list .)
    LBRACE          reduce using rule 101 (linebreak -> newline_list .)
    LPAREN          reduce using rule 101 (linebreak -> newline_list .)
    IF              reduce using rule 101 (linebreak -> newline_list .)
    FOR             reduce using rule 101 (linebreak -> newline_list .)
    WHILE           reduce using rule 101 (linebreak -> newline_list .)
    UNTIL           reduce using rule 101 (linebreak -> newline_list .)
    CASE            reduce using rule 101 (linebreak -> newline_list .)
    LESS            reduce using rule 101 (linebreak -> newline_list .)
    GREAT           reduce using rule 101 (linebreak -> newline_list .)
    DGREAT          reduce using rule 101 (linebreak -> newline_list .)
    LESSAND         reduce using rule 101 (linebreak -> newline_list .)
    GREATAND        reduce using rule 101 (linebreak -> newline_list .)
    FD_GREAT        reduce using rule 101 (linebreak -> newline_list .)
    FD_DGREAT       reduce using rule 101 (linebreak -> newline_list .)
    HEREDOC         reduce using rule 101 (linebreak -> newline_list .)
    HERESTRING      reduce using rule 101 (linebreak -> newline_list .)
    SINGLE_QUOTED   reduce using rule 101 (linebreak -> newline_list .)
    DOUBLE_QUOTED   reduce using rule 101 (linebreak -> newline_list .)
    VAR_SIMPLE      reduce using rule 101 (linebreak -> newline_list .)
    VAR_BRACED      reduce using rule 101 (linebreak -> newline_list .)
    VAR_SPECIAL     reduce using rule 101 (linebreak -> newline_list .)
    CMD_SUB         reduce using rule 101 (linebreak -> newline_list .)
    CMD_SUB_BACKTICK reduce using rule 101 (linebreak -> newline_list .)
    ARITH_SUB       reduce using rule 101 (linebreak -> newline_list .)
    NUMBER          reduce using rule 101 (linebreak -> newline_list .)
    LBRACKET        reduce using rule 101 (linebreak -> newline_list .)
    RBRACKET        reduce using rule 101 (linebreak -> newline_list .)
    DLBRACKET       reduce using rule 101 (linebreak -> newline_list .)
    DRBRACKET       reduce using rule 101 (linebreak -> newline_list .)
    $end            reduce using rule 101 (linebreak -> newline_list .)
    IN              reduce using rule 101 (linebreak -> newline_list .)
    DO              reduce using rule 101 (linebreak -> newline_list .)
    RPAREN          reduce using rule 101 (linebreak -> newline_list .)
    RBRACE          reduce using rule 101 (linebreak -> newline_list .)
    THEN            reduce using rule 101 (linebreak -> newline_list .)
    ELSE            reduce using rule 101 (linebreak -> newline_list .)
    FI              reduce using rule 101 (linebreak -> newline_list .)
    ELIF            reduce using rule 101 (linebreak -> newline_list .)
    DONE            reduce using rule 101 (linebreak -> newline_list .)
    DSEMI           reduce using rule 101 (linebreak -> newline_list .)
    ESAC            reduce using rule 101 (linebreak -> newline_list .)
    NEWLINE         shift and go to state 57

  ! NEWLINE         [ reduce using rule 101 (linebreak -> newline_list .) ]


state 4

    (102) linebreak -> empty .

    WORD            reduce using rule 102 (linebreak -> empty .)
    FUNCTION        reduce using rule 102 (linebreak -> empty .)
    ASSIGNMENT_WORD reduce using rule 102 (linebreak -> empty .)
    LBRACE          reduce using rule 102 (linebreak -> empty .)
    LPAREN          reduce using rule 102 (linebreak -> empty .)
    IF              reduce using rule 102 (linebreak -> empty .)
    FOR             reduce using rule 102 (linebreak -> empty .)
    WHILE           reduce using rule 102 (linebreak -> empty .)
    UNTIL           reduce using rule 102 (linebreak -> empty .)
    CASE            reduce using rule 102 (linebreak -> empty .)
    LESS            reduce using rule 102 (linebreak -> empty .)
    GREAT           reduce using rule 102 (linebreak -> empty .)
    DGREAT          reduce using rule 102 (linebreak -> empty .)
    LESSAND         reduce using rule 102 (linebreak -> empty .)
    GREATAND        reduce using rule 102 (linebreak -> empty .)
    FD_GREAT        reduce using rule 102 (linebreak -> empty .)
    FD_DGREAT       reduce using rule 102 (linebreak -> empty .)
    HEREDOC         reduce using rule 102 (linebreak -> empty .)
    HERESTRING      reduce using rule 102 (linebreak -> empty .)
    SINGLE_QUOTED   reduce using rule 102 (linebreak -> empty .)
    DOUBLE_QUOTED   reduce using rule 102 (linebreak -> empty .)
    VAR_SIMPLE      reduce using rule 102 (linebreak -> empty .)
    VAR_BRACED      reduce using rule 102 (linebreak -> empty .)
    VAR_SPECIAL     reduce using rule 102 (linebreak -> empty .)
    CMD_SUB         reduce using rule 102 (linebreak -> empty .)
    CMD_SUB_BACKTICK reduce using rule 102 (linebreak -> empty .)
    ARITH_SUB       reduce using rule 102 (linebreak -> empty .)
    NUMBER          reduce using rule 102 (linebreak -> empty .)
    LBRACKET        reduce using rule 102 (linebreak -> empty .)
    RBRACKET        reduce using rule 102 (linebreak -> empty .)
    DLBRACKET       reduce using rule 102 (linebreak -> empty .)
    DRBRACKET       reduce using rule 102 (linebreak -> empty .)
    $end            reduce using rule 102 (linebreak -> empty .)
    IN              reduce using rule 102 (linebreak -> empty .)
    DO              reduce using rule 102 (linebreak -> empty .)
    RPAREN          reduce using rule 102 (linebreak -> empty .)
    RBRACE          reduce using rule 102 (linebreak -> empty .)
    THEN            reduce using rule 102 (linebreak -> empty .)
    ELSE            reduce using rule 102 (linebreak -> empty .)
    FI              reduce using rule 102 (linebreak -> empty .)
    ELIF            reduce using rule 102 (linebreak -> empty .)
    DONE            reduce using rule 102 (linebreak -> empty .)
    DSEMI           reduce using rule 102 (linebreak -> empty .)
    NEWLINE         reduce using rule 102 (linebreak -> empty .)
    ESAC            reduce using rule 102 (linebreak -> empty .)


state 5

    (100) newline_list -> NEWLINE .

    NEWLINE         reduce using rule 100 (newline_list -> NEWLINE .)
    WORD            reduce using rule 100 (newline_list -> NEWLINE .)
    FUNCTION        reduce using rule 100 (newline_list -> NEWLINE .)
    ASSIGNMENT_WORD reduce using rule 100 (newline_list -> NEWLINE .)
    LBRACE          reduce using rule 100 (newline_list -> NEWLINE .)
    LPAREN          reduce using rule 100 (newline_list -> NEWLINE .)
    IF              reduce using rule 100 (newline_list -> NEWLINE .)
    FOR             reduce using rule 100 (newline_list -> NEWLINE .)
    WHILE           reduce using rule 100 (newline_list -> NEWLINE .)
    UNTIL           reduce using rule 100 (newline_list -> NEWLINE .)
    CASE            reduce using rule 100 (newline_list -> NEWLINE .)
    LESS            reduce using rule 100 (newline_list -> NEWLINE .)
    GREAT           reduce using rule 100 (newline_list -> NEWLINE .)
    DGREAT          reduce using rule 100 (newline_list -> NEWLINE .)
    LESSAND         reduce using rule 100 (newline_list -> NEWLINE .)
    GREATAND        reduce using rule 100 (newline_list -> NEWLINE .)
    FD_GREAT        reduce using rule 100 (newline_list -> NEWLINE .)
    FD_DGREAT       reduce using rule 100 (newline_list -> NEWLINE .)
    HEREDOC         reduce using rule 100 (newline_list -> NEWLINE .)
    HERESTRING      reduce using rule 100 (newline_list -> NEWLINE .)
    SINGLE_QUOTED   reduce using rule 100 (newline_list -> NEWLINE .)
    DOUBLE_QUOTED   reduce using rule 100 (newline_list -> NEWLINE .)
    VAR_SIMPLE      reduce using rule 100 (newline_list -> NEWLINE .)
    VAR_BRACED      reduce using rule 100 (newline_list -> NEWLINE .)
    VAR_SPECIAL     reduce using rule 100 (newline_list -> NEWLINE .)
    CMD_SUB         reduce using rule 100 (newline_list -> NEWLINE .)
    CMD_SUB_BACKTICK reduce using rule 100 (newline_list -> NEWLINE .)
    ARITH_SUB       reduce using rule 100 (newline_list -> NEWLINE .)
    NUMBER          reduce using rule 100 (newline_list -> NEWLINE .)
    LBRACKET        reduce using rule 100 (newline_list -> NEWLINE .)
    RBRACKET        reduce using rule 100 (newline_list -> NEWLINE .)
    DLBRACKET       reduce using rule 100 (newline_list -> NEWLINE .)
    DRBRACKET       reduce using rule 100 (newline_list -> NEWLINE .)
    $end            reduce using rule 100 (newline_list -> NEWLINE .)
    IN              reduce using rule 100 (newline_list -> NEWLINE .)
    DO              reduce using rule 100 (newline_list -> NEWLINE .)
    RPAREN          reduce using rule 100 (newline_list -> NEWLINE .)
    RBRACE          reduce using rule 100 (newline_list -> NEWLINE .)
    THEN            reduce using rule 100 (newline_list -> NEWLINE .)
    ELSE            reduce using rule 100 (newline_list -> NEWLINE .)
    FI              reduce using rule 100 (newline_list -> NEWLINE .)
    ELIF            reduce using rule 100 (newline_list -> NEWLINE .)
    DONE            reduce using rule 100 (newline_list -> NEWLINE .)
    DSEMI           reduce using rule 100 (newline_list -> NEWLINE .)
    ESAC            reduce using rule 100 (newline_list -> NEWLINE .)


state 6

    (1) program -> linebreak complete_commands . linebreak
    (3) complete_commands -> complete_commands . newline_list complete_command
    (101) linebreak -> . newline_list
    (102) linebreak -> . empty
    (99) newline_list -> . newline_list NEWLINE
    (100) newline_list -> . NEWLINE
    (103) empty -> .

    NEWLINE         shift and go to state 5
    $end            reduce using rule 103 (empty -> .)

    linebreak                      shift and go to state 58
    newline_list                   shift and go to state 59
    empty                          shift and go to state 4

state 7

    (4) complete_commands -> complete_command .

    NEWLINE         reduce using rule 4 (complete_commands -> complete_command .)
    $end            reduce using rule 4 (complete_commands -> complete_command .)


state 8

    (5) complete_command -> and_or_list . separator_op
    (6) complete_command -> and_or_list .
    (7) and_or_list -> and_or_list . AND_IF linebreak pipeline
    (8) and_or_list -> and_or_list . OR_IF linebreak pipeline
    (95) separator_op -> . AMP
    (96) separator_op -> . SEMI

    NEWLINE         reduce using rule 6 (complete_command -> and_or_list .)
    $end            reduce using rule 6 (complete_command -> and_or_list .)
    AND_IF          shift and go to state 61
    OR_IF           shift and go to state 62
    AMP             shift and go to state 63
    SEMI            shift and go to state 64

    separator_op                   shift and go to state 60

state 9

    (9) and_or_list -> pipeline .
    (10) pipeline -> pipeline . PIPE linebreak command

    AND_IF          reduce using rule 9 (and_or_list -> pipeline .)
    OR_IF           reduce using rule 9 (and_or_list -> pipeline .)
    AMP             reduce using rule 9 (and_or_list -> pipeline .)
    SEMI            reduce using rule 9 (and_or_list -> pipeline .)
    NEWLINE         reduce using rule 9 (and_or_list -> pipeline .)
    $end            reduce using rule 9 (and_or_list -> pipeline .)
    RPAREN          reduce using rule 9 (and_or_list -> pipeline .)
    RBRACE          reduce using rule 9 (and_or_list -> pipeline .)
    THEN            reduce using rule 9 (and_or_list -> pipeline .)
    DO              reduce using rule 9 (and_or_list -> pipeline .)
    ELSE            reduce using rule 9 (and_or_list -> pipeline .)
    FI              reduce using rule 9 (and_or_list -> pipeline .)
    ELIF            reduce using rule 9 (and_or_list -> pipeline .)
    DONE            reduce using rule 9 (and_or_list -> pipeline .)
    DSEMI           reduce using rule 9 (and_or_list -> pipeline .)
    ESAC            reduce using rule 9 (and_or_list -> pipeline .)
    WORD            reduce using rule 9 (and_or_list -> pipeline .)
    SINGLE_QUOTED   reduce using rule 9 (and_or_list -> pipeline .)
    DOUBLE_QUOTED   reduce using rule 9 (and_or_list -> pipeline .)
    VAR_SIMPLE      reduce using rule 9 (and_or_list -> pipeline .)
    VAR_BRACED      reduce using rule 9 (and_or_list -> pipeline .)
    VAR_SPECIAL     reduce using rule 9 (and_or_list -> pipeline .)
    CMD_SUB         reduce using rule 9 (and_or_list -> pipeline .)
    CMD_SUB_BACKTICK reduce using rule 9 (and_or_list -> pipeline .)
    ARITH_SUB       reduce using rule 9 (and_or_list -> pipeline .)
    NUMBER          reduce using rule 9 (and_or_list -> pipeline .)
    ASSIGNMENT_WORD reduce using rule 9 (and_or_list -> pipeline .)
    LBRACKET        reduce using rule 9 (and_or_list -> pipeline .)
    RBRACKET        reduce using rule 9 (and_or_list -> pipeline .)
    DLBRACKET       reduce using rule 9 (and_or_list -> pipeline .)
    DRBRACKET       reduce using rule 9 (and_or_list -> pipeline .)
    PIPE            shift and go to state 65


state 10

    (11) pipeline -> command .

    PIPE            reduce using rule 11 (pipeline -> command .)
    AND_IF          reduce using rule 11 (pipeline -> command .)
    OR_IF           reduce using rule 11 (pipeline -> command .)
    AMP             reduce using rule 11 (pipeline -> command .)
    SEMI            reduce using rule 11 (pipeline -> command .)
    NEWLINE         reduce using rule 11 (pipeline -> command .)
    $end            reduce using rule 11 (pipeline -> command .)
    RPAREN          reduce using rule 11 (pipeline -> command .)
    RBRACE          reduce using rule 11 (pipeline -> command .)
    THEN            reduce using rule 11 (pipeline -> command .)
    DO              reduce using rule 11 (pipeline -> command .)
    ELSE            reduce using rule 11 (pipeline -> command .)
    FI              reduce using rule 11 (pipeline -> command .)
    ELIF            reduce using rule 11 (pipeline -> command .)
    DONE            reduce using rule 11 (pipeline -> command .)
    DSEMI           reduce using rule 11 (pipeline -> command .)
    ESAC            reduce using rule 11 (pipeline -> command .)
    WORD            reduce using rule 11 (pipeline -> command .)
    SINGLE_QUOTED   reduce using rule 11 (pipeline -> command .)
    DOUBLE_QUOTED   reduce using rule 11 (pipeline -> command .)
    VAR_SIMPLE      reduce using rule 11 (pipeline -> command .)
    VAR_BRACED      reduce using rule 11 (pipeline -> command .)
    VAR_SPECIAL     reduce using rule 11 (pipeline -> command .)
    CMD_SUB         reduce using rule 11 (pipeline -> command .)
    CMD_SUB_BACKTICK reduce using rule 11 (pipeline -> command .)
    ARITH_SUB       reduce using rule 11 (pipeline -> command .)
    NUMBER          reduce using rule 11 (pipeline -> command .)
    ASSIGNMENT_WORD reduce using rule 11 (pipeline -> command .)
    LBRACKET        reduce using rule 11 (pipeline -> command .)
    RBRACKET        reduce using rule 11 (pipeline -> command .)
    DLBRACKET       reduce using rule 11 (pipeline -> command .)
    DRBRACKET       reduce using rule 11 (pipeline -> command .)


state 11

    (12) command -> simple_command .
